[package]
name = "version_middleware"
version = "0.1.0"
authors = ["Nebeto <contact@nebeto.xyz>"]
edition = "2024"
description = "Custom extractor for Rust Axum to extract the version from an HTTP header `x-version`."
readme = "README.md"
repository = "https://github.com/nebetoxyz/rust-version-middleware--lib"
license-file = "./LICENSE.md"
keywords = ["middleware", "header", "x-version"]
categories = ["middleware", "library"]
exclude = [".github/", ".vscode/", ".gitignore"]

[lib]
path = "src/lib.rs"
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib"]

[dependencies]
axum = "0.8.1"
tokio = "1.44.1"
